--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.zsun.java</groupId>
@@ -8,8 +7,10 @@
     <version>1.0</version>
     <packaging>pom</packaging>
     <modules>
-        <module>module-thinkinginjava</module>
-    </modules>
+        <module>thinkinginjava</module>
+        <module>leetcode</module>
+    <module>algorithms</module>
+  </modules>
 
     <name>Java Advanced</name>
     <url>http://maven.apache.org</url>
@@ -242,7 +243,9 @@
                             <goal>check</goal>
                         </goals>
                         <configuration>
-                            <excludes>report/*,com/zsun/java/avro/Transformer.java,com/zsun/java/avro/schema/*,com/zsun/java/thrift/*</excludes>
+                            <excludes>
+                                report/*,com/zsun/java/avro/Transformer.java,com/zsun/java/avro/schema/*,com/zsun/java/thrift/*
+                            </excludes>
                             <encoding>UTF-8</encoding>
                             <consoleOutput>true</consoleOutput>
                             <failsOnError>true</failsOnError>
