--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
         <hadoop.version>2.7.2</hadoop.version>
         <hbase.version>1.3.1</hbase.version>
         <java.version>1.8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <parquet.version>1.7.0</parquet.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
