--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -8,17 +8,13 @@
         <artifactId>advanced</artifactId>
         <version>1.0</version>
     </parent>
-
-    <groupId>com.zsun.java.algorithms</groupId>
-    <artifactId>algorithms</artifactId>
-
-    <name>Algorithms</name>
+    <groupId>com.zsun.java.utils</groupId>
+    <artifactId>utils</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <name>utils</name>
     <url>http://maven.apache.org</url>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
         <advanced.main.basedir>${project.parent.basedir}</advanced.main.basedir>
     </properties>
 
@@ -26,11 +22,8 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.zsun.java.utils</groupId>
-            <artifactId>utils</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>3.8.1</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
