--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.zsun.java</groupId>
@@ -13,9 +14,10 @@
         <module>corejava9</module>
         <module>nowcoder</module>
         <module>utils</module>
-    <module>effective-java</module>
-    <module>jvm-insight</module>
-  </modules>
+        <module>effective-java</module>
+        <module>jvm-insight</module>
+        <module>quartz</module>
+    </modules>
 
     <name>Java Advanced</name>
     <url>http://maven.apache.org</url>
